Fixes #23744 - Package action modal is too short
(cherry picked from commit 87817105c69fe21ef55d49fb13ee0c565b4aedbd)

--- a/engines/bastion_katello/app/assets/stylesheets/bastion_katello/bastion_katello.scss
+++ b/engines/bastion_katello/app/assets/stylesheets/bastion_katello/bastion_katello.scss
@@ -34,3 +34,7 @@
 .list-aligned {
   list-style-position: inside;
 }
+
+.bottom-padded-content {
+  padding-bottom: 10%;
+}
